<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPortal">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/scanner_label1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/scanner_label2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumberEdit" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/scanner_label3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameEdit" />

    <EditText
            android:id="@+id/NumberEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="2017556821"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:hint="“年份”+“6位数字”"/>

    <EditText
            android:id="@+id/NameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="李华"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:hint="输一个“像人”的名字"/>

    <EditText
            android:id="@+id/CollegeEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="随机学院"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:hint="以“学院”结尾"/>
    <TextView
            android:text="@string/confirm_label16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/CollegeEdit"
            app:layout_constraintStart_toStartOf="@+id/CollegeEdit"/>
    <TextView
            android:text="@string/confirm_label19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView74"
            app:layout_constraintTop_toBottomOf="@+id/TypeSpinner"
            app:layout_constraintStart_toStartOf="@+id/TypeSpinner"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="重庆市,重庆市,南岸区"
            android:ems="10"
            android:id="@+id/WentPlaceEdit"
            app:layout_constraintStart_toStartOf="@+id/textView74"
            app:layout_constraintTop_toBottomOf="@+id/textView74" android:hint="依次填入省、市、地，不知道就保持默认"
            app:layout_constraintEnd_toEndOf="@+id/TypeSpinner"/>
    <TextView
            android:text="@string/confirm_label11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView75"
            app:layout_constraintTop_toBottomOf="@+id/WentPlaceEdit"
            app:layout_constraintStart_toStartOf="@+id/WentPlaceEdit"/>
    <TextView
            android:text="@string/confirm_label20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView76"
            app:layout_constraintTop_toBottomOf="@+id/ScanPlaceSpinner"
            app:layout_constraintStart_toStartOf="@+id/ScanPlaceSpinner"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="出校"
            android:ems="10"
            android:id="@+id/ReasonEdit"
            app:layout_constraintStart_toStartOf="@+id/textView76"
            app:layout_constraintTop_toBottomOf="@+id/textView76"
            android:hint="填个“比较像那么回事”的理由" app:layout_constraintEnd_toEndOf="@+id/ScanPlaceSpinner"/>
    <Button
            android:text="@string/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ReasonEdit" android:layout_marginStart="16dp"
            android:onClick="saveUserConfig"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="@+id/ReasonEdit"/>
    <Button
            android:text="@string/userportal_saveandjump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/ReasonEdit"
            style="@style/Widget.MaterialComponents.Button.TextButton.Snackbar" app:iconTint="@color/purple_200"
            android:textColor="@color/purple_200" app:layout_constraintTop_toBottomOf="@+id/buttonSave"
            app:layout_constraintStart_toStartOf="@+id/buttonSave" android:onClick="saveAndJump"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="45dp" android:id="@+id/ScanPlaceSpinner"
            app:layout_constraintStart_toStartOf="@+id/textView75" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:spinnerMode="dropdown"
            android:entries="@array/places" app:layout_constraintTop_toBottomOf="@+id/textView75"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="45dp" android:id="@+id/TypeSpinner"
            android:spinnerMode="dropdown" android:entries="@array/reasons"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/CollegeEdit"/>
</androidx.constraintlayout.widget.ConstraintLayout>