<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConfirmActivity" android:background="@color/light_grey" android:fadeScrollbars="true"
        android:scrollbarStyle="insideInset" android:scrollbars="horizontal">

    <TextView
            android:text="@string/confirm_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="310dp"
            android:background="@color/white"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp" app:srcCompat="@drawable/purpledot" android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/toolbar6" app:layout_constraintStart_toStartOf="@+id/toolbar6"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="3dp"
            android:layout_height="0dp"
            android:id="@+id/progressBar7"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintBottom_toTopOf="@+id/imageView13" app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4" android:foreground="@color/grey_light"/>
    <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp" app:srcCompat="@drawable/yellowdot" android:id="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4" android:layout_marginTop="80dp"/>
    <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp" app:srcCompat="@drawable/greydot" android:id="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="@+id/imageView10" android:layout_marginTop="80dp"/>
    <TextView
            android:text="@string/confirm_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView42"
            android:textColor="@color/grey" android:textStyle="bold"
            android:fontFamily="sans-serif-black" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/confirm_label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView43"
            app:layout_constraintTop_toBottomOf="@+id/textView42"
            app:layout_constraintStart_toStartOf="@+id/textView42" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="李华"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView44"
            app:layout_constraintTop_toTopOf="@+id/textView43"
            app:layout_constraintBottom_toBottomOf="@+id/textView43" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/confirm_label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView45"
            app:layout_constraintTop_toBottomOf="@+id/textView43"
            app:layout_constraintStart_toStartOf="@+id/textView43" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="2021-04-04 18:18:18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView46"
            app:layout_constraintTop_toTopOf="@+id/textView45"
            app:layout_constraintBottom_toBottomOf="@+id/textView45"
            app:layout_constraintEnd_toEndOf="@+id/textView44"/>
    <TextView
            android:text="@string/confirm_label5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView47"
            android:fontFamily="sans-serif-black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="bold"
            android:textColor="@color/grey" app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="@+id/textView42" android:textSize="17sp" android:onClick="goOut"/>
    <TextView
            android:text="@string/confirm_label6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView48"
            android:lineSpacingExtra="8sp"
            android:textColor="@color/purple" app:layout_constraintTop_toTopOf="@+id/textView47"
            app:layout_constraintBottom_toBottomOf="@+id/textView47"
            app:layout_constraintEnd_toEndOf="@+id/textView46"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textStyle="bold"
            android:textSize="17sp" android:onClick="RunScanner"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_below="@+id/textView48"
            android:layout_alignLeft="@+id/textView48"
            android:layout_alignRight="@+id/textView48"
            android:background="@color/purple"
            app:layout_constraintStart_toStartOf="@+id/textView48" app:layout_constraintEnd_toEndOf="@+id/textView48"
            app:layout_constraintBottom_toBottomOf="@+id/textView48" android:onClick="RunScanner"
            android:id="@+id/line1"/>
    <TextView
            android:text="@string/confirm_label7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView49"
            android:textColor="@color/grey_tint"
            app:layout_constraintTop_toBottomOf="@+id/textView47"
            app:layout_constraintStart_toStartOf="@+id/textView47" android:layout_marginTop="8dp"/>
    <TextView
            android:text="崇文门"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView50"
            app:layout_constraintTop_toTopOf="@+id/textView49"
            app:layout_constraintBottom_toBottomOf="@+id/textView49"
            app:layout_constraintEnd_toEndOf="@+id/textView48"/>
    <TextView
            android:text="@string/confirm_label8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView51"
            android:textColor="@color/grey_tint"
            app:layout_constraintTop_toBottomOf="@+id/textView49"
            app:layout_constraintStart_toStartOf="@+id/textView49" android:layout_marginTop="8dp"/>
    <TextView
            android:text="2021-04-04 18:18:18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView52"
            app:layout_constraintTop_toTopOf="@+id/textView51"
            app:layout_constraintBottom_toBottomOf="@+id/textView51"
            app:layout_constraintEnd_toEndOf="@+id/textView50"/>
    <TextView
            android:text="@string/confirm_label9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView53"
            android:textColor="@color/grey"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:fontFamily="sans-serif-black"
            android:textStyle="bold" app:layout_constraintTop_toTopOf="@+id/imageView13"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/textView47" android:textSize="17sp" android:onClick="goIn"/>
    <TextView
            android:text="@string/confirm_label10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView54"
            app:layout_constraintTop_toTopOf="@+id/textView53"
            app:layout_constraintBottom_toBottomOf="@+id/textView53" android:textStyle="bold"
            android:textColor="@color/purple" app:layout_constraintEnd_toEndOf="@+id/textView52"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textSize="17sp"
            android:onClick="RunScanner"/>
    <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_below="@+id/textView54"
            android:layout_alignLeft="@+id/textView54"
            android:layout_alignRight="@+id/textView54"
            android:background="@color/purple"
            app:layout_constraintStart_toStartOf="@+id/textView54" app:layout_constraintEnd_toEndOf="@+id/textView54"
            app:layout_constraintBottom_toBottomOf="@+id/textView54" android:id="@+id/line2"/>
    <TextView
            android:text="@string/confirm_label11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView55"
            app:layout_constraintTop_toBottomOf="@+id/textView53"
            app:layout_constraintStart_toStartOf="@+id/textView53" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="崇文门"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView56"
            app:layout_constraintTop_toTopOf="@+id/textView55"
            app:layout_constraintBottom_toBottomOf="@+id/textView55"
            app:layout_constraintEnd_toEndOf="@+id/textView54"/>
    <TextView
            android:text="@string/confirm_label12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView57"
            app:layout_constraintTop_toBottomOf="@+id/textView55"
            app:layout_constraintStart_toStartOf="@+id/textView55" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="2021-04-04 18:18:18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView58"
            app:layout_constraintTop_toTopOf="@+id/textView57"
            app:layout_constraintBottom_toBottomOf="@+id/textView57"
            app:layout_constraintEnd_toEndOf="@+id/textView56"/>
    <TextView
            android:text="@string/confirm_label13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView59"
            app:layout_constraintTop_toBottomOf="@+id/toolbar6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:background="@color/white"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar8"
            app:layout_constraintTop_toBottomOf="@+id/textView59" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/confirm_label14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView60"
            app:layout_constraintTop_toTopOf="@+id/toolbar8" app:layout_constraintStart_toStartOf="@+id/toolbar8"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:textColor="@color/grey_tint"/>
    <TextView
            android:text="2017210577"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView61"
            app:layout_constraintTop_toTopOf="@+id/textView60"
            app:layout_constraintBottom_toBottomOf="@+id/textView60" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/confirm_label15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView62"
            app:layout_constraintTop_toBottomOf="@+id/textView60"
            app:layout_constraintStart_toStartOf="@+id/textView60" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="李华"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView63"
            app:layout_constraintTop_toTopOf="@+id/textView62"
            app:layout_constraintBottom_toBottomOf="@+id/textView62"
            app:layout_constraintEnd_toEndOf="@+id/textView61"/>
    <TextView
            android:text="@string/confirm_label16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView64"
            app:layout_constraintTop_toBottomOf="@+id/textView62"
            app:layout_constraintStart_toStartOf="@+id/textView62" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="市内当日离返校"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView65"
            app:layout_constraintTop_toTopOf="@+id/textView64"
            app:layout_constraintBottom_toBottomOf="@+id/textView64"
            app:layout_constraintEnd_toEndOf="@+id/textView63"/>
    <TextView
            android:text="@string/confirm_label17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView66"
            app:layout_constraintTop_toBottomOf="@+id/textView64"
            app:layout_constraintStart_toStartOf="@+id/textView64" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="2021-04-04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView67"
            app:layout_constraintTop_toTopOf="@+id/textView66"
            app:layout_constraintBottom_toBottomOf="@+id/textView66"
            app:layout_constraintEnd_toEndOf="@+id/textView65"/>
    <TextView
            android:text="@string/confirm_label18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView68"
            app:layout_constraintTop_toBottomOf="@+id/textView66"
            app:layout_constraintStart_toStartOf="@+id/textView66" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="2021-04-04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView69"
            app:layout_constraintTop_toTopOf="@+id/textView68"
            app:layout_constraintBottom_toBottomOf="@+id/textView68"
            app:layout_constraintEnd_toEndOf="@+id/textView67"/>
    <TextView
            android:text="@string/confirm_label19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView70"
            app:layout_constraintTop_toBottomOf="@+id/textView68"
            app:layout_constraintStart_toStartOf="@+id/textView68" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="重庆市,重庆市,南岸区"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView71"
            app:layout_constraintTop_toTopOf="@+id/textView70"
            app:layout_constraintBottom_toBottomOf="@+id/textView70"
            app:layout_constraintEnd_toEndOf="@+id/textView69"/>
    <TextView
            android:text="@string/confirm_label20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView72"
            app:layout_constraintTop_toBottomOf="@+id/textView70"
            app:layout_constraintStart_toStartOf="@+id/textView70" android:layout_marginTop="8dp"
            android:textColor="@color/grey_tint"/>
    <TextView
            android:text="出校"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView73"
            app:layout_constraintEnd_toEndOf="@+id/textView71" app:layout_constraintTop_toTopOf="@+id/textView72"
            app:layout_constraintBottom_toBottomOf="@+id/textView72"/>
</androidx.constraintlayout.widget.ConstraintLayout>